<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:id="@+id/container"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/show_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            android:nestedScrollingEnabled="false"
            tools:listitem="@layout/item_list_holder"
            app:stackFromEnd="true"
            app:reverseLayout="true"/>

</LinearLayout>