...

        <include
                android:id="@+id/main_component_toolbar"
                layout="@layout/component_toolbar" />

        <com.google.android.material.tabs.TabLayout
                android:id="@+id/main_tab_layout"
                app:tabTextColor="@color/gray"
                android:background="@color/colorBackgroundSecondary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:tabGravity="fill"
                app:tabMode="fixed"/>
...
